--- a/src/main/resources/com/example/sevenwonders/menu-view.fxml
+++ b/src/main/resources/com/example/sevenwonders/menu-view.fxml
@@ -3,43 +3,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.Pane?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="1920" prefWidth="1080" stylesheets="@font.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sevenwonders.MenuControllers">
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-       <ImageView fitHeight="3800" fitWidth="1930" pickOnBounds="true" preserveRatio="true">
-       <image>
+      <ImageView fitHeight="543.0" fitWidth="725.0" layoutX="-4.0" layoutY="-4.0">
+         <image>
             <Image url="@../../../Assets/background/ExtendHomepage.png" />
          </image>
       </ImageView>
-      <AnchorPane prefHeight="986.0" prefWidth="1536.0">
-         <children>
-            <Button fx:id="gameButton" layoutX="880" layoutY="400" mnemonicParsing="false" onAction="#onGameButtonClick" prefHeight="26.0" prefWidth="230.0" styleClass="transparent-button" stylesheets="@font.css" text="NEW GAME" textAlignment="CENTER">
-               <font>
-                  <Font name="PossumSaltareNF" size="33.0" />
-               </font>
-            </Button>
-            <Button fx:id="optionsButton" layoutX="900" layoutY="500" mnemonicParsing="false" onAction="#onOptionsButtonClick" prefHeight="69.0" prefWidth="186.0" styleClass="transparent-button" stylesheets="@font.css" text="OPTIONS" textAlignment="CENTER">
-               <font>
-                  <Font name="PossumSaltareNF" size="33.0" />
-               </font>
-            </Button>
-            <Button fx:id="quitButton" layoutX="930" layoutY="600" mnemonicParsing="false" onAction="#onQuitButtonClick" prefHeight="75.0" prefWidth="123.0" styleClass="transparent-button" stylesheets="@font.css" text="QUIT" textAlignment="CENTER">
-               <font>
-                  <Font name="PossumSaltareNF" size="33.0" />
-               </font>
-            </Button>
-         </children>
-      </AnchorPane>
+      <Button layoutX="319.0" layoutY="205.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="87.0" text="New Game" textFill="#030303" />
+      <Button layoutX="320.0" layoutY="272.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="87.0" text="Options" />
+      <Button layoutX="320.0" layoutY="333.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="87.0" text="Quit" />
    </children>
-</GridPane>
+</Pane>
